[project]
name = "ekantipur-scraper"
version = "0.1.0"
description = "Playwright-based scraper for Ekantipur entertainment news"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
dev-dependencies = []